styles/AboutMeSection.module.css
.aboutMe {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  height: 100%;
  background-color: #2E2E2E
}

.aboutMeContent {
    display: flex;
    min-height: 100%;
    justify-content: center;
    align-items: center;
    padding: .8rem;
  }
  
  /* .aboutMeGrid {
    display: grid;
    grid-template-columns: repeat(9, 1fr);
    grid-template-rows: repeat(9, 1fr);
    gap: 1rem;
    max-width: 130rem;
    width: 100%;
    min-height: 90vh;
    background-color: #2E2E2E;
  } */

  .aboutMeGrid {
    display: flex;
    flex-direction: row;
  }
  
  .aboutMeTxt {
    /* grid-column: 1 / 7;
    grid-row: 2/7; */
    width: 50%;
    margin: .5rem;
    display: flex;
    flex-direction: column;
    border-radius: .6rem;
    background-color: #FFFFFF;
  }

  .aboutMeTxtContent {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    font-family: 'Menlo', sans-serif;
    font-size: 1.5rem;
  }
  
  .aboutMeTxtContent div {
    margin-bottom: 2rem;;
  }
  
  .aboutMeTxtContent div p {
    margin: .3rem 0;
  }
  
  .skillsFolder {
    /* grid-column: 7/10;
    grid-row: 2/10; */
    width: 50%;
    margin: .5rem;
    display: flex;
    flex-direction: column;
    border-radius: .6rem;
    background-color: #FFFFFF;
  }
  
  .skillsList {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
  }
  

